@@ -53,6 +53,7 @@ features:
 - added upgrade from quadratic constraints to set-packing constraints
 - generalized the linking constraint handler
 - in verblevel SCIP_VERBLEVEL_FULL the number of non-zeros will be computed for the original and presolved model
+- new presolving step for tightening logicor constraints using implication and clique information
 
 performance improvements:
 - conflict consisting of exactly two binary variables will be handled as set-packing constraint instead of an logicor
